fixed overflow section practicas

--- a/style.css
+++ b/style.css
@@ -398,6 +398,9 @@ video {
   flex-direction: column;
   align-items: center;
   margin: 2rem auto 0 auto;
+  flex: 1; 
+    min-height: 200px; 
+    padding: 20px;
 }
 
 .practicas-title {
@@ -420,8 +423,9 @@ video {
 }
 
 .practicas-card {
-  width: 300px;
-  height: 300px;
+  max-width: 300px;
+  max-height: 300px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
